--- a/public/app/partials/admin/Manage/screens.html
+++ b/public/app/partials/admin/Manage/screens.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab" ng-controller="adminScreenCtrl">
+            <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab">
 
                 <h4>{{title}}</h4>
 
