--- a/public/app/partials/admin/logs.html
+++ b/public/app/partials/admin/logs.html
@@ -13,7 +13,7 @@
 
     <div class="bhoechie-tab-content active">
         <center>
-            <div class="table-responsive table-container" ng-controller="logsinf" ng-cloak="" >
+            <div class="table-responsive table-container" ng-cloak="" >
                 <span ng-if="$data === null">
                     <div>
                       Log file >50M, please download it.
