--- a/public/app/partials/top-menu.html
+++ b/public/app/partials/top-menu.html
@@ -1,4 +1,4 @@
-<div class="container nav-container" ng-controller="TopMenuCtrl">
+<div class="container nav-container">
     <div class="col-md-12 col-xs-12">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
