--- a/public/app/partials/search/advancedSearch.html
+++ b/public/app/partials/search/advancedSearch.html
@@ -35,7 +35,7 @@
 </nav>
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron alert alert-dismissible inner-jumbotron shadow " ng-show="caption" id="no-border-round"
-     role="alert" ng-controller="reccoController">
+     role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     <h1>Advanced Search</h1>
@@ -45,7 +45,7 @@
 
 </div>
 
-<div class="row" ng-controller="searchController">
+<div class="row">
     <!-- Posting area start -->
     <div class="postingContainer">
         <div class="col-md-12">
