--- a/public/app/partials/evezplace/home.html
+++ b/public/app/partials/evezplace/home.html
@@ -5,7 +5,7 @@
 
     <!-- Wrapper for slides -->
     <div class="jumbotron home-jumbotron"
-         ng-show="caption" id="no-border-round" ng-controller="HomeController" style="padding:4px 4px 4px 4px;background-color:#FFFFFF;border: 1px solid #CFCFCE;margin-bottom:4px;">
+         ng-show="caption" id="no-border-round" style="padding:4px 4px 4px 4px;background-color:#FFFFFF;border: 1px solid #CFCFCE;margin-bottom:4px;">
         <div class="carousel-inner"
              ng-intro-options="IntroOptions" ng-intro-method="CallMe"
              ng-intro-oncomplete="CompletedEvent" ng-intro-onexit="ExitEvent"
