--- a/public/app/partials/profile/userProfileCount.html
+++ b/public/app/partials/profile/userProfileCount.html
@@ -1,4 +1,4 @@
-    <div class="col-md-12" ng-controller="profileCtrl">
+    <div class="col-md-12" ng-controller="profileCountCtrl">
             <div class="col-md-2  well text-center" id="user-profile">
                 <h3>{{friendsList}}</h3>
                 <h4>Friends</h4>
