--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -37,58 +37,8 @@
 
 <div class="col-md-12">
 <div class="row user-menu-container square">
-<div class="col-md-12 user-details" ng-controller="profileCtrl">
-    <div class="row coralbg white">
-        <div class="col-md-3 top-margin">
-            <div class="user-image biothumb" ng-controller="ProfileImageCrop">
-                <img ng-src="{{profileImage}}" src="http://placehold.it/300x200"
-                     class="img-responsive thumbnail" />
-                <div class="overlay fileUpload" ng-if="userId == loggedInUserId">
-                    <ul class="list-unstyled text-center">
-                        <li><a href ng-click="CropEvezsiteImage()" id="CropEvezsiteImage">Update Mysite
-                            Image</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <div ng-include='"partials/profile/details/depthProfileCount.html"'></div>
 
-        <div class="col-md-9 no-pad">
-            <div class="user-pad-profile">
-                <!--name-->
-                <h3 style="text-transform: capitalize;">{{ firstname }} {{ lastname }}</h3>
-                <!--Location-->
-                <div ng-hide="city == '' || country =='' || city == null || country == null">
-                    <h4 style="text-transform: capitalize;"><i class="fa fa-location-arrow"></i>&nbsp;{{locationDetails}}</h4>
-                </div>
-
-                <!--Profession starts-->
-                <!--job and company-->
-                <div ng-hide="designation == '' || organization =='' || designation == null || organization == null">
-                    <h4 style="text-transform: capitalize;">
-                        <i class="fa fa-briefcase"></i> {{designation}}&nbsp;&nbsp;{{connectingtext}}&nbsp;&nbsp;{{organization}}
-                    </h4>
-                </div>
-                <!--Profession ends-->
-            </div>
-            <div class="row" ng-include='"partials/profile/userProfileCount.html"' ng-controller = "profileCtrl"></div>
-        </div>
-        <div class="col-md-12">
-            <div class="carousel-inner"
-             ng-intro-options="IntroOptions" ng-intro-method="CallMe"
-             ng-intro-oncomplete="CompletedEvent" ng-intro-onexit="ExitEvent"
-             ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="BeforeChangeEvent"
-             ng-intro-autostart="false">
-            <h3>About Me</h3>
-
-            <p>{{aboutme}}</p>
-            
-            <button class="btn btn-lg btn-primary pull-right" ng-click="CallMe();" style="padding-top:6px;padding-bottom:6px;">Take a Tour</button>
-            </div>
-        </div>
-    </div>
-
-</div>
 <div class="col-md-12" style="margin-top: 10px;" id="view">
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
         <li><a href="#home">Home</a> <span class="divider"></span></li>
@@ -96,7 +46,7 @@
         <li class="active">Details</li>
     </ul>
 </div>
-<div class="col-md-2 user-menu-btns" ng-controller="profileDetailsCtrl">
+<div class="col-md-2 user-menu-btns">
     <div class="btn-group-vertical square" id="responsive">
         <a id="step1"  data-toggle="tab" data-slide-to="0" href="#profile/{{userId}}/personalinfo" class="btn btn-block btn-default active">
             <p>Personal Info Basic</p>
