--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -42,7 +42,7 @@
 <div class="col-md-12" style="margin-top: 10px;" id="view">
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
         <li><a href="#home">Home</a> <span class="divider"></span></li>
-        <li><a href="#profile/myprofile/{{userId}}">Profile</a></li>
+        <li><a href="#mystores/{{userId}}">Profile</a></li>
         <li class="active">Details</li>
     </ul>
 </div>
