--- a/public/app/partials/profile/details/participation.html
+++ b/public/app/partials/profile/details/participation.html
@@ -41,7 +41,7 @@
         <div class="col-md-12" id="view" style="margin-top: 10px;">
             <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
                 <li><a href="#home">Home</a> <span class="divider"></span></li>
-                <li><a href="#profile/myprofile/{{userId}}">Profile</a></li>
+                <li><a href="#mystores/{{userId}}">Profile</a></li>
                 <li class="active">Details</li>
             </ul>
         </div>
