--- a/public/app/partials/profile/myBlog.html
+++ b/public/app/partials/profile/myBlog.html
@@ -43,9 +43,9 @@
 </div>
 
 
-<div class="col-md-12 col-xs-12" ng-controller="profileCtrl">
+<div class="col-md-12 col-xs-12">
     <div class="row user-menu-container square">
-        <div class="col-md-12 col-xs-12 no-padding user-details">
+        <div class="col-md-12 col-xs-12 no-padding user-details" ng-controller="profileCtrl">
             <div class="col-md-12 col-xs-12 coralbg white">
                 <div class="col-md-3 col-xs-4 top-margin">
                     <div class="user-image biothumb">
@@ -93,7 +93,7 @@
         </div>
 
         <!--For Member-->
-        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-show="Role != 1 && currentUserId == loggedInUserId">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-show="roleId != 1 && currentUserId == loggedInUserId">
             <div class="col-md-12 col-xs-12">
                 <div class="col-md-12 col-xs-12 empty-section text-center">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
@@ -109,8 +109,7 @@
         </div>
 
         <!--For Admin-->
-        <div class="col-md-10 col-xs-12 user-menu user-pad"  ng-show="Role == 1 && currentUserId == loggedInUserId">
-        <div  ng-controller="blogCntrl">
+        <div class="col-md-10 col-xs-12 user-menu user-pad"  ng-show="roleId == 1 && currentUserId == loggedInUserId">
         	<div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
                 <div class="fragment">
                     <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
@@ -187,11 +186,9 @@
                 <button class="btn btn-block btn-blue" ng-if="myBlogs.length > 6">Load More</button>
             </div>
         </div>
-        </div>
 
         <!--For visitiing friends profile-->
         <div class="col-md-10 col-xs-12 user-menu user-pad"  ng-show="currentUserId != loggedInUserId">
-        <div  ng-controller="blogCntrl">
             <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
                 <div class="fragment">
                     <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
@@ -256,7 +253,6 @@
                 </div>
                 <button class="btn btn-block btn-blue" ng-if="myBlogs.length > 6">Load More</button>
             </div>
-        </div>
         </div>
 
 
