--- a/public/app/partials/Community/blog-details.html
+++ b/public/app/partials/Community/blog-details.html
@@ -35,7 +35,7 @@
 </nav>
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron alert alert-dismissible inner-jumbotron shadow " ng-show="caption" id="no-border-round"
-     role="alert" ng-controller="ApplicationCtrl">
+     role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     <h1>Build Community</h1>
@@ -52,7 +52,7 @@
     <!-- <li ng-if="isProfile == false"><a href="#blogs">Blogs</a></li> -->
 </ul>
 
-<div class="col-md-8 blog-content-section" ng-controller="blogCntrl">
+<div class="col-md-8 blog-content-section">
 
     <article class="blog-content-details">
 
