Performance fixes - albums

--- a/public/app/partials/profile/myAlbum.html
+++ b/public/app/partials/profile/myAlbum.html
@@ -42,9 +42,9 @@
     ng-include src='"partials/profile/PromotionalToolMenu.html"'>
 </div>
 
-<div class="col-md-12 col-xs-12" ng-controller="profileCtrl">
+<div class="col-md-12 col-xs-12">
     <div class="row user-menu-container square">
-        <div class="col-md-12 col-xs-12 no-padding user-details">
+        <div class="col-md-12 col-xs-12 no-padding user-details" ng-controller="profileCtrl">
             <div class="col-md-12 col-xs-12 coralbg white">
                 <div class="col-md-3 col-xs-4 top-margin">
                     <div class="user-image biothumb">
@@ -92,7 +92,7 @@
             ng-include src='"partials/profile/PromotionalToolMenu.html"'>
         </div>
 
-<div class="col-md-10 col-xs-12 user-menu user-pad"  ng-controller="albums">
+<div class="col-md-10 col-xs-12 user-menu user-pad">
     <div class="col-md-12 col-xs-12 panel-heading">
     	<div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
 	        <div class="fragment">
