--- a/public/app/partials/Community/group-details.html
+++ b/public/app/partials/Community/group-details.html
@@ -35,7 +35,7 @@
 </nav>
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron alert alert-dismissible inner-jumbotron shadow " ng-show="caption" id="no-border-round"
-     role="alert" ng-controller="ApplicationCtrl">
+     role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     <h1>Build Community</h1>
@@ -49,7 +49,7 @@
     <li><a href="#home">Home</a></li>
     <li><a href="#mygroups/{{currentUserId}}">Groups</a></li>
 </ul>
-<div ng-controller="groups" class="custom-group-section">
+<div class="custom-group-section">
 <div class="col-md-12" style="padding: 0px; margin-bottom: 20px">
     <div class="col-md-3" style="padding: 0px">
         <div class="panel-heading text-center" style="height: 280px; background: #f5f5f5; padding: 0px; ">
