focus on payment section -  manage store
while select pay from manage store, focus is set to payment section

--- a/public/app/partials/payment/onlyOnline.html
+++ b/public/app/partials/payment/onlyOnline.html
@@ -50,7 +50,7 @@
                             <input name="udf3" type="hidden" ng-value="" />
                             <input name="udf4" type="hidden" ng-value="" />
                             <input name="udf5" type="hidden" ng-value="" />
-                            <input type="submit" class="btn btn-primary btn-block" value="Pay Through PayU Money" style="margin-top:10px;margin-bottom:10px;"/>
+                            <input type="submit" class="btn btn-primary btn-block" value="Pay Through PayU Money" autofocus-when="totalPrice" style="margin-top:10px;margin-bottom:10px;"/>
                         </form>
                     </div>
 
