--- a/public/app/partials/evezplace/get_started.html
+++ b/public/app/partials/evezplace/get_started.html
@@ -3,7 +3,10 @@
     <div  style="padding: 10px 240px">
         <h4 style="line-height: 1.5">It is easy to create a store on Evezown. Get Started now.</h4>
     </div>
-    <div class="col-md-6 col-md-offset-3" style="margin-top: 40px">
-        <a href ng-click="Create_Store()" class="btn btn-primary btn-block" style="padding: 20px 80px; font-size: 22px; border-radius: 10px;">Get Started <span class="fa fa-arrow-right"></span></a>
+    <div class="col-md-4 col-md-offset-2">
+    	<a href back-button class="btn btn-primary btn-block" style="font-size: 22px; border-radius: 10px;"><i class="fa fa-chevron-left"></i> Goback</a>
+    </div>
+    <div class="col-md-4">
+        <a href ng-click="Create_Store()" class="btn btn-primary btn-block" style="font-size: 22px; border-radius: 10px;">Get Started <span class="fa fa-arrow-right"></span></a>
     </div>
 </div>
