--- a/public/app/partials/profile/mystores.html
+++ b/public/app/partials/profile/mystores.html
@@ -195,7 +195,7 @@
                                         <a href="#store/{{item.id}}/profile" style="color: #ffffff; font-size: 1.2em"><h5 style="padding: 10px">{{item.title}}</h5></a>
                                     </div>
                                     <div class="col-xs-6">
-                                        <a href="#store/{{item.id}}/manage/store_info" class="btn btn-link btn-sm pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">manage store</a>
+                                        <a href="#store/{{item.id}}/manage/store_info/{{pagesrc}}" class="btn btn-link btn-sm pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">manage store</a>
                                     </div>
                                 </div>
                             </div>
