--- a/public/app/partials/evezplace/manage/store/analytics.html
+++ b/public/app/partials/evezplace/manage/store/analytics.html
@@ -1,7 +1,13 @@
-<ul class="breadcrumb create-store-breadcrumb" style="background: transparent">
+<ul ng-if="pagesrc == 'marketplace'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
     <li><a href="#home">Home</a> <span class="divider"></span></li>
     <li><a href="#evezplace">Marketplace</a></li>
     <li><a href="#store/browse">Stores</a></li>
+    <li>Manage Store</li>
+</ul>
+
+<ul ng-if="pagesrc == 'profile'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
+    <li><a href="#mystores/{{loggedInUserId}}">Mystores</a></li>
     <li>Manage Store</li>
 </ul>
 
@@ -20,7 +26,7 @@
 
 <div class="col-sm-9">
     <div class="row">
-        <div class="create-store-section" ng-controller="CreateStoreController">
+        <div class="create-store-section">
             <div class="row" style="margin-top: 40px">
                 <h1 class="text-center" style="color: #e51385;">Store Analytics</h1><br><br><br>
                 <h4 class="text-center">Comming Soon</h4>
