--- a/public/app/partials/evezplace/manage/store/orders/orders.html
+++ b/public/app/partials/evezplace/manage/store/orders/orders.html
@@ -1,11 +1,19 @@
-<ul class="breadcrumb create-store-breadcrumb" style="background: transparent">
+<ul ng-if="pagesrc == 'marketplace'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
     <li><a href="#evezplace">Marketplace</a></li>
+    <li><a href="#store/browse">Stores</a></li>
+    <li>Manage Store</li>
+</ul>
+
+<ul ng-if="pagesrc == 'profile'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
+    <li><a href="#mystores/{{loggedInUserId}}">Mystores</a></li>
     <li>Manage Store</li>
 </ul>
 
 <div ng-include src='"partials/evezplace/manage/store/manage_store_left_menu.html"'></div>
 
-<div class="col-sm-9" ng-controller="ManageOrdersCtrl">
+<div class="col-sm-9">
     <h4>Manage Orders</h4>
 
     <div class="row" ng-repeat="order in orders">
