--- a/public/app/partials/evezplace/manage/store/promotion.html
+++ b/public/app/partials/evezplace/manage/store/promotion.html
@@ -1,5 +1,13 @@
-<ul class="breadcrumb create-store-breadcrumb" style="background: transparent">
+<ul ng-if="pagesrc == 'marketplace'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
     <li><a href="#evezplace">Marketplace</a></li>
+    <li><a href="#store/browse">Stores</a></li>
+    <li>Manage Store</li>
+</ul>
+
+<ul ng-if="pagesrc == 'profile'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
+    <li><a href="#mystores/{{loggedInUserId}}">Mystores</a></li>
     <li>Manage Store</li>
 </ul>
 
@@ -19,7 +27,7 @@
 <div class="col-sm-9">
     <div class="row">
 
-        <div class="create-store-section" ng-controller="CreateStoreController">
+        <div class="create-store-section">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h5 style="color: #e51385; font-weight: 700; font-size: 1.2em">Store Front - Promotion</h5>
