--- a/public/app/views/manage/store/manage_rfq.html
+++ b/public/app/views/manage/store/manage_rfq.html
@@ -1,5 +1,13 @@
-<ul class="breadcrumb create-store-breadcrumb" style="background: transparent">
-    <li><a href="#evezplace">MarketPlace</a></li>
+<ul ng-if="pagesrc == 'marketplace'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
+    <li><a href="#evezplace">Marketplace</a></li>
+    <li><a href="#store/browse">Stores</a></li>
+    <li>Manage Store</li>
+</ul>
+
+<ul ng-if="pagesrc == 'profile'" class="breadcrumb create-store-breadcrumb" style="background: transparent">
+    <li><a href="#home">Home</a> <span class="divider"></span></li>
+    <li><a href="#mystores/{{loggedInUserId}}">Mystores</a></li>
     <li>Manage Store</li>
 </ul>
 
@@ -19,7 +27,7 @@
 
 <div class="col-sm-9">
     <div class="row">
-        <div class="create-store-section" ng-controller="manageRfqCtrl">
+        <div class="create-store-section">
             <div class="col-sm-12" ng-repeat="storeRfq in storeRfqCollection"
                  style="background-color: #fff; margin-bottom: 10px">
                 <div class="row">
