Admin page invites issues - fixed

--- a/public/app/partials/admin/home.html
+++ b/public/app/partials/admin/home.html
@@ -1,20 +1,20 @@
 <div class="container">
     <span us-spinner="{radius:6, width:2, length: 2,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="true">
-
-            </span>
+    </span>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-8 col-xs-9 bhoechie-tab-container">
             <div class="col-lg-2 col-md-2 col-sm-2 bhoechie-tab-menu">
-                <div 
-                ng-include src='"partials/admin/adminLeftMenu.html"'>
+                <div ng-include src='"partials/admin/adminLeftMenu.html"'>
                 </div>
             </div>
             <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab">
                 <!-- flight section -->
-                <div class="bhoechie-tab-content active" ng-controller="AdminInviteCtrl">
+                <div class="bhoechie-tab-content active">
                     <div class="col-md-2 col-md-offset-4 pull-right custom-invite-eves-button">
-            <a href="#admin/AdminInviteFrnds" class="btn btn-primary"><span class="fa fa-plus"></span> invite people</a>
-        </div>
+                        <a href="#admin/AdminInviteFrnds" class="btn btn-primary">
+                            <span class="fa fa-plus"></span> invite people
+                        </a>
+                    </div>
 
                     <h1>{{title}}</h1>
                     <center>
