--- a/public/app/partials/Community/event-details.html
+++ b/public/app/partials/Community/event-details.html
@@ -35,7 +35,7 @@
 </nav>
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron alert alert-dismissible inner-jumbotron shadow " ng-show="caption" id="no-border-round"
-     role="alert">
+     role="alert" ng-controller="ApplicationCtrl">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     <h1>Build Community</h1>
@@ -257,43 +257,45 @@
     <!-- Announcement list section ends -->
 </div>
 <div class="col-md-3 custom-event-panel" style="padding-right: 0px">
-    <div class="panel" style="background: #f7f7f7;">
-        <div class="panel-heading">
-            <h5 style="color: #337ab7; font-weight: 600 ;margin-top: 5px; margin-bottom: 5px">Attendees
-                ({{selectedEvent.attendees.length}})</h5>
-        </div>
-        <div class="col-sm-12 text-center panel-body" style=" height: 300px"
-             ng-if="selectedEvent.attendees.length == 0">
-            <div class="col-sm-12">
-                <input type="text" class="form-control" placeholder="search attendees" ng-model="friendsearch"/>
+    <div>
+        <div class="col-md-12" style="padding-right: 0px">
+            <!-- Search members -->
+            <div class="panel" style="background: #f7f7f7;">
+                <div class="panel-heading">
+                    <h5 style="color: #337ab7; font-weight: 600 ;margin-top: 5px; margin-bottom: 5px">Attendees
+                        ({{selectedEvent.attendees.length}})</h5>
+                </div>
+                <div class="panel-heading" ng-if="selectedEvent.attendees.length > 0">
+                   <input type="text" placeholder="search attendees" ng-model="friendsearch" class="form-control"/>
+                </div>
+                <ul class="list-group" ng-repeat="friend in selectedEvent.attendees | filter:friendsearch | orderBy:'firstname':true">
+                    <li class="list-group-item col-sm-12" ng-if="friend.friend_user_id != loggedInUserId">
+                        <div class="col-sm-9" style="padding-left: 0px; padding-right: 0px">
+                            <a href="#mystores/{{friend.friend_user_id}}"><img
+                                    ng-src="{{service_url+'image/show/'+friend.profile.profile_image.large_image_url}}"
+                                    class="img-thumbnail" style="width: 32px; height: 32px" alt=""/>
+                                {{friend.profile.firstname}}, {{friend.profile.lastname}}</a>
+                        </div>
+                    </li>
+               </ul>
+               <ul class="list-group" ng-if="selectedEvent.owner.user_id != loggedInUserId">
+                    <li class="list-group-item col-sm-12" >
+                        <div class="col-sm-9" style="padding-left: 0px; padding-right: 0px">
+                            <a href="#mystores/{{selectedEvent.owner.user_id}}"><img
+                                    ng-src="{{service_url+'image/show/'+selectedEvent.owner.profile_image.large_image_url}}"
+                                    class="img-thumbnail" style="width: 32px; height: 32px" alt=""/>
+                                {{selectedEvent.owner.firstname}}, {{selectedEvent.owner.lastname}}</a>
+                        </div>
+                        <div class="col-sm-3" style="padding-left: 0px; padding-right: 0px; color:green;">
+                            Creator
+                        </div>
+                    </li>
+               </ul>  
             </div>
-            <h5 style="margin-top: 150px; color: #444444; text-transform: none">Event does not have any
-                attendees</h5>
-        </div>
-        <div class="col-md-12 friends-section panel-body" ng-if="selectedEvent.attendees.length > 0"
-             style="padding-left: 0px;">
-            <div class="col-sm-12">
-                <input type="text" class="form-control" placeholder="search attendees" ng-model="friendsearch"/>
-            </div>
-            <ul class="row" style="padding-left: 0px">
-                <li class="col-lg-3 col-md-3 col-sm-4 col-xs-6"
-                    style="padding-left: 10px; padding-right: 10px; padding-top:10px "
-                    ng-repeat="friend in selectedEvent.attendees | filter:friendsearch | orderBy:'firstname':true">
-                    <a href="#mystores/{{friend.friend_user_id}}">
-                        <center>
-                            <div>
-                                <img ng-src="{{service_url+'image/show/'+friend.profile.profile_image.large_image_url}}"
-                                     class="img-thumbnail"/>
-                            </div>
-                            <p>{{friend.profile.firstname}}</p>
-                        </center>
-                    </a>
-                </li>
-            </ul>
         </div>
         <div class="col-md-12 custom-event-invite" style="padding-right: 0px" ng-if="selectedEvent.owner_id == loggedInUserId">
            
-            <div class="panel" style="background: #f7f7f7;">
+            <div class="panel" style="background: #f7f7f7;" ng-controller="eventCtrl">
                 <div class="panel-heading">
                     <input type="text" placeholder="Search friends" ng-model="queryMembers" class="form-control"/>
                 </div>
