--- a/public/app/partials/evezplace/manage/store/product_catalogue.html
+++ b/public/app/partials/evezplace/manage/store/product_catalogue.html
@@ -33,12 +33,12 @@
     <!--Products count-->
     <div class="row">
         <!--Free-->
-        <div class="col-md-12" ng-show="currentStore[0].store_subscription_id == 1 && ! EvezStore">
-                <h4 class="text-center">{{totalProducts}} of {{MaxProductsFree}} products added (<a href="" ng-click="changeSubscription(2)"><span style="color: #e51385">upgrade</span></a> to add more)</h4>
+        <div class="col-md-12" ng-show="currentStore[0].store_subscription_id == 1">
+                <h4 class="text-center">{{totalProducts}} of {{Product_Limit}} products added (<a href="" ng-click="changeSubscription(2)"><span style="color: #e51385">upgrade</span></a> to add more)</h4>
         </div>
         <!--Premium-->
-        <div class="col-md-12" ng-show="currentStore[0].store_subscription_id == 2 && ! EvezStore">
-                <h4 class="text-center">{{totalProducts}} of {{MaxProductsPremium}} products added (<a href="" ng-click="changeSubscription(3)"><span style="color: #e51385">upgrade</span></a> to add more)</h4>
+        <div class="col-md-12" ng-show="currentStore[0].store_subscription_id == 2">
+                <h4 class="text-center">{{totalProducts}} of {{Product_Limit}} products added (<a href="" ng-click="changeSubscription(3)"><span style="color: #e51385">upgrade</span></a> to add more)</h4>
         </div>
     </div>
     
