circle visibility fixes

--- a/public/app/partials/Community/circle-details.html
+++ b/public/app/partials/Community/circle-details.html
@@ -47,7 +47,7 @@
     <li><a href="#home">Home</a></li>
     <li><a href="#circles">Circles</a></li>
 </ul>
-<div ng-controller="circles">
+<div>
     <div class="col-md-12 circle-section" style="padding-right: 0px; padding-left: 0px">
         <div class="col-md-12 panel-heading custom-circles">
             <div class="col-lg-2 col-md-3 col-sm-4">
