--- a/public/app/partials/payment/allPayment.html
+++ b/public/app/partials/payment/allPayment.html
@@ -76,7 +76,7 @@
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad aliquam cupiditate dicta
                                 </p> -->
-                                <img ng-src="img/payUmoney.png" class="img-responsive" alt=""/>
+                                <img ng-src="img/payu1.png" class="img-responsive" alt=""/>
                             </div>
                         </div>
                         <form action="https://secure.payu.in/_payment" method="post" target="_top" name="payuForm" id="payuForm">
