--- a/public/app/partials/admin/events.html
+++ b/public/app/partials/admin/events.html
@@ -169,7 +169,7 @@
                     <select class="form-control"
                             ng-model="options.selectedSectionId"
                             style="font-weight: 700"
-                            default-option="Choose Evezplace Section"
+                            default-option="Choose Marketplace Section"
                             ng-options="section.id as section.name for section in sections"
                             required>
                     </select>
