--- a/public/app/partials/Community/circles.html
+++ b/public/app/partials/Community/circles.html
@@ -73,7 +73,7 @@
         </a> -->
     </div>
 </div>
-<div class="col-md-10 user-menu user-pad" ng-controller="circles">
+<div class="col-md-10 user-menu user-pad">
     <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
         <div class="fragment">
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
